# weekend-getaway-planner

./: README.md  pyproject.toml
src/weekend_getaway_planner/: crew.py  main.py
src/weekend_getaway_planner/config/: agents.yaml  tasks.yaml
